<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:iconTint="@color/orange"
        android:title="@string/homePage" />

    <item
        android:id="@+id/nav_exchange"
        android:icon="@drawable/baseline_currency_exchange_24"
        android:iconTint="@color/orange"
        android:title="@string/currency_exchange_rate" />

    <item
        android:id="@+id/nav_transaction"
        android:iconTint="@color/orange"
        android:icon="@drawable/money_transfer"
        android:title="@string/allTrnx" />

    <item
        android:id="@+id/nav_delete"
        android:iconTint="@color/orange"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/deleteTran" />
    <item
        android:id="@+id/nav_about"
        android:iconTint="@color/orange"
        android:icon="@drawable/information"
        android:title="@string/about" />

    <item
        android:id="@+id/nav_rateus"
        android:iconTint="@color/orange"
        android:icon="@drawable/star_fill0_wght400_grad0_opsz24"
        android:title="@string/rate_us" />

</menu>


