<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.SearchTransactionFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_transaction"
        android:textSize="16dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/radioGroupTransactionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <RadioButton
            android:id="@+id/radioButtonExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/orange"
            android:text="@string/expense" />

        <RadioButton
            android:id="@+id/radioButtonIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/orange"
            android:text="@string/income" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />


    <Button
        android:id="@+id/searchTransaction"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/orange"
        android:text="@string/search"
        android:textColor="@android:color/white"
         />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchTransactionRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/fragment_transaction_item" />


    <TextView
        android:id="@+id/noResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:textSize="16dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginBottom="16dp"/>

</LinearLayout>