<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    tools:context=".fragments.TransactionFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:paddingTop="15dp" />
            <LinearLayout
                android:id="@+id/categoryLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">
                <TextView
                    android:id="@+id/transactionCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/category"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/transactionNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/notes_txt"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/transactionDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/date"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/amountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:text="@string/amount_txt"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>