<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ExchangeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/android_background"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/currency_exchange"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/canada_flag"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/flag_canada" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_1_cad"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/arrow_right"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_arrow_right_alt_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/country_flag"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/country_flag"
                    android:src="@drawable/default_flag" />

                <Spinner
                    android:id="@+id/spnCurrency"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtExchangeRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:text="@string/exchange_rate"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>